[package]
name = "ultra"
version = "0.3.1"
authors = ["Kevin Yap <me@kevinyap.ca>"]
description = "Cryptanalysis of the Engima."
keywords = ["enigma", "cryptanalysis"]
homepage = "https://github.com/iKevinY/ultra"
repository = "https://github.com/iKevinY/ultra"
documentation = "https://docs.rs/ultra"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "iKevinY/ultra" }

[[bin]]
name = "ultra"
path = "src/main.rs"
test = false
doc = false

[lib]
path = "src/lib.rs"

[profile.test]
opt-level = 2

[dependencies]
clap = "2.20"
itertools = "0.5"
lazy_static = "0.2"
rand = "0.3"
