[package]
name = "ultra"
version = "0.5.0"
authors = ["Kevin Yap <me@kevinyap.ca>"]
description = "Cryptanalysis of the Engima."
keywords = ["enigma", "cryptanalysis"]
homepage = "https://github.com/iKevinY/ultra"
repository = "https://github.com/iKevinY/ultra"
documentation = "https://docs.rs/ultra"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "iKevinY/ultra" }

[[bin]]
name = "ultra"
path = "src/main.rs"
test = false
doc = false

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[dependencies]
clap = "2.25"
itertools = "0.10"
lazy_static = "1.0"
ordered-float = "2.1.1"
rand = "0.8"
rayon = "1.5"
